--- a/index.html
+++ b/index.html
@@ -374,17 +374,17 @@
                     <!-- Right Col: Awards -->
                     <div>
                         <div class="flex items-center gap-3 mb-8">
-                            <div class="p-3 bg-yellow-100 dark:bg-yellow-900/30 rounded-xl text-yellow-600 dark:text-yellow-400">
+                            <div class="p-3 bg-primary-100 dark:bg-primary-900/30 rounded-xl text-primary-600 dark:text-primary-400">
                                 <i data-lucide="trophy" class="w-6 h-6"></i>
                             </div>
                             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Awards</h2>
                         </div>
-                        <div class="bg-gradient-to-r from-yellow-50 to-white dark:from-slate-800 dark:to-slate-800 border border-yellow-100 dark:border-slate-700 p-4 rounded-xl flex items-center justify-between hover:from-yellow-100 hover:to-yellow-50 dark:hover:from-yellow-900/40 dark:hover:to-slate-800 hover:border-yellow-300 dark:hover:border-yellow-700 hover:shadow-md transition-all duration-300 cursor-pointer">
+                        <div class="bg-transparent border border-gray-200 dark:border-slate-700 p-4 rounded-xl flex items-center justify-between hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:border-primary-300 dark:hover:border-primary-700 hover:shadow-md transition-all duration-300 cursor-pointer">
                             <div>
                                 <h4 class="font-bold text-gray-900 dark:text-white">Global Korea Scholarship awardee</h4>
                                 <p class="text-sm text-gray-600 dark:text-gray-400">Korean Government</p>
                             </div>
-                            <span class="text-yellow-600 dark:text-yellow-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-sm">2020</span>
+                            <span class="text-primary-600 dark:text-primary-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-sm">2020</span>
                         </div>
                     </div>
                 </div>
@@ -457,43 +457,28 @@
                         <h3 class="text-sm font-bold text-gray-400 dark:text-gray-500 uppercase tracking-widest mb-3">Certifications</h3>
                         <div class="space-y-3">
                             <a href="/certificates/Udemy_Solidity_Bootcamp.pdf" target="_blank" rel="noopener noreferrer"
-                               class="bg-gradient-to-r from-green-50 to-white dark:from-slate-800 dark:to-slate-800 border border-green-100 dark:border-slate-700 p-4 rounded-xl hover:from-green-100 hover:to-green-50 dark:hover:from-green-900/40 dark:hover:to-slate-800 hover:border-green-300 dark:hover:border-green-700 hover:shadow-md transition-all duration-300 flex items-center justify-between group no-underline">
-                                <div class="flex items-center gap-3">
-                                    <div class="p-2 bg-green-100 dark:bg-green-900/30 rounded-lg group-hover:bg-green-200 dark:group-hover:bg-green-900/50 transition-colors">
-                                        <i data-lucide="award" class="w-5 h-5 text-green-600 dark:text-green-400"></i>
-                                    </div>
-                                    <div>
-                                        <h4 class="font-bold text-gray-900 dark:text-white text-sm group-hover:text-green-700 dark:group-hover:text-green-400 transition-colors">Ethereum Blockchain Developer Bootcamp with Solidity</h4>
-                                        <p class="text-xs text-gray-600 dark:text-gray-400">Udemy</p>
-                                    </div>
+                               class="bg-transparent border border-gray-200 dark:border-slate-700 p-4 rounded-xl hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:border-primary-300 dark:hover:border-primary-700 hover:shadow-md transition-all duration-300 flex items-center justify-between group no-underline">
+                                <div>
+                                    <h4 class="font-bold text-gray-900 dark:text-white text-sm group-hover:text-primary-700 dark:group-hover:text-primary-400 transition-colors">Ethereum Blockchain Developer Bootcamp with Solidity</h4>
+                                    <p class="text-xs text-gray-600 dark:text-gray-400">Udemy</p>
                                 </div>
-                                <span class="text-green-600 dark:text-green-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-xs">2021</span>
+                                <span class="text-primary-600 dark:text-primary-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-xs">2021</span>
                             </a>
                             <a href="/certificates/Palo_Alto_Cybersecurity_Infrastructure.pdf" target="_blank" rel="noopener noreferrer"
-                               class="bg-gradient-to-r from-green-50 to-white dark:from-slate-800 dark:to-slate-800 border border-green-100 dark:border-slate-700 p-4 rounded-xl hover:from-green-100 hover:to-green-50 dark:hover:from-green-900/40 dark:hover:to-slate-800 hover:border-green-300 dark:hover:border-green-700 hover:shadow-md transition-all duration-300 flex items-center justify-between group no-underline">
-                                <div class="flex items-center gap-3">
-                                    <div class="p-2 bg-green-100 dark:bg-green-900/30 rounded-lg group-hover:bg-green-200 dark:group-hover:bg-green-900/50 transition-colors">
-                                        <i data-lucide="award" class="w-5 h-5 text-green-600 dark:text-green-400"></i>
-                                    </div>
-                                    <div>
-                                        <h4 class="font-bold text-gray-900 dark:text-white text-sm group-hover:text-green-700 dark:group-hover:text-green-400 transition-colors">Cybersecurity Instructure Configuration</h4>
-                                        <p class="text-xs text-gray-600 dark:text-gray-400">Palo Alto Networks</p>
-                                    </div>
+                               class="bg-transparent border border-gray-200 dark:border-slate-700 p-4 rounded-xl hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:border-primary-300 dark:hover:border-primary-700 hover:shadow-md transition-all duration-300 flex items-center justify-between group no-underline">
+                                <div>
+                                    <h4 class="font-bold text-gray-900 dark:text-white text-sm group-hover:text-primary-700 dark:group-hover:text-primary-400 transition-colors">Cybersecurity Instructure Configuration</h4>
+                                    <p class="text-xs text-gray-600 dark:text-gray-400">Palo Alto Networks</p>
                                 </div>
-                                <span class="text-green-600 dark:text-green-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-xs">2020</span>
+                                <span class="text-primary-600 dark:text-primary-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-xs">2020</span>
                             </a>
                             <a href="/certificates/III_Cybersecurity_Infrastructure.pdf" target="_blank" rel="noopener noreferrer"
-                               class="bg-gradient-to-r from-green-50 to-white dark:from-slate-800 dark:to-slate-800 border border-green-100 dark:border-slate-700 p-4 rounded-xl hover:from-green-100 hover:to-green-50 dark:hover:from-green-900/40 dark:hover:to-slate-800 hover:border-green-300 dark:hover:border-green-700 hover:shadow-md transition-all duration-300 flex items-center justify-between group no-underline">
-                                <div class="flex items-center gap-3">
-                                    <div class="p-2 bg-green-100 dark:bg-green-900/30 rounded-lg group-hover:bg-green-200 dark:group-hover:bg-green-900/50 transition-colors">
-                                        <i data-lucide="award" class="w-5 h-5 text-green-600 dark:text-green-400"></i>
-                                    </div>
-                                    <div>
-                                        <h4 class="font-bold text-gray-900 dark:text-white text-sm group-hover:text-green-700 dark:group-hover:text-green-400 transition-colors">Cybersecurity Overview</h4>
-                                        <p class="text-xs text-gray-600 dark:text-gray-400">Institute For Information Industry, Taiwan</p>
-                                    </div>
+                               class="bg-transparent border border-gray-200 dark:border-slate-700 p-4 rounded-xl hover:bg-primary-50 dark:hover:bg-primary-900/20 hover:border-primary-300 dark:hover:border-primary-700 hover:shadow-md transition-all duration-300 flex items-center justify-between group no-underline">
+                                <div>
+                                    <h4 class="font-bold text-gray-900 dark:text-white text-sm group-hover:text-primary-700 dark:group-hover:text-primary-400 transition-colors">Cybersecurity Overview</h4>
+                                    <p class="text-xs text-gray-600 dark:text-gray-400">Institute For Information Industry, Taiwan</p>
                                 </div>
-                                <span class="text-green-600 dark:text-green-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-xs">2020</span>
+                                <span class="text-primary-600 dark:text-primary-400 font-bold bg-white dark:bg-slate-700 px-3 py-1 rounded-full shadow-sm text-xs">2020</span>
                             </a>
                         </div>
                     </div>
@@ -789,29 +774,11 @@
         </section>
 
         <!-- Footer -->
-        <footer id="contact" class="bg-slate-950 dark:bg-slate-950 text-white py-12 transition-colors duration-300">
+        <footer id="contact" class="bg-gray-100 dark:bg-slate-950 py-6">
             <div class="max-w-6xl mx-auto px-4 text-center">
-                <h2 class="text-2xl font-bold mb-6">Let's Connect</h2>
-                <p class="text-gray-400 mb-8 max-w-lg mx-auto">
-                    I am currently open to new opportunities in Blockchain Engineering, Smart Contract Auditing, and R&D roles.
+                <p class="text-gray-600 dark:text-gray-400 text-sm">
+                    &copy; 2025 Muhammad Rasyid Redha Ansori. All rights reserved.
                 </p>
-                
-                <div class="flex justify-center gap-6 mb-8">
-                    <a href="mailto:rasyid.red@gmail.com" class="text-gray-400 hover:text-primary-400 transition-colors">
-                        <i data-lucide="mail" class="w-6 h-6"></i>
-                    </a>
-                    <a href="https://github.com/rasyidred" target="_blank" rel="noreferrer" class="text-gray-400 hover:text-primary-400 transition-colors">
-                        <i data-lucide="github" class="w-6 h-6"></i>
-                    </a>
-                    <a href="https://linkedin.com/in/rasyidred" target="_blank" rel="noreferrer" class="text-gray-400 hover:text-primary-400 transition-colors">
-                        <i data-lucide="linkedin" class="w-6 h-6"></i>
-                    </a>
-                </div>
-
-                <div class="text-gray-500 text-sm">
-                <p>&copy; <script>document.write(new Date().getFullYear())</script> Muhammad Rasyid Redha Ansori. All rights reserved.</p>
-                <p class="mt-2 text-xs">Built with Tailwind CSS.</p>
-                </div>
             </div>
         </footer>
     </main>
