--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 
                 <!-- Profile Image -->
                 <div class="flex-shrink-0 relative group">
-                    <div class="w-48 h-48 md:w-64 md:h-64 rounded-full overflow-hidden border-4 border-white dark:border-slate-700 shadow-xl bg-gray-200 dark:bg-slate-800">
-                        <img 
-                        src="https://picsum.photos/400/400" 
-                        alt="Muhammad Rasyid Redha Ansori" 
-                        class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500"
+                    <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white dark:border-slate-700 shadow-xl bg-gray-200 dark:bg-slate-800">
+                        <img
+                        src="assets/profile.JPG"
+                        alt="Muhammad Rasyid Redha Ansori"
+                        class="w-full h-full object-cover transition-all duration-500"
                         />
                     </div>
                     <div class="absolute bottom-2 right-2 md:bottom-4 md:right-4 bg-white dark:bg-slate-700 p-2 rounded-full shadow-md text-primary-600 dark:text-primary-400">
