--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
                             </div>
                             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">Awards</h2>
                         </div>
-                        <!-- Awards items populated by data-loader.js -->
+                        <div class="space-y-3">
+                            <!-- Awards items populated by data-loader.js -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -270,7 +272,6 @@
                 <!-- Publications populated by data-loader.js -->
                 <div class="space-y-4" id="papers-list">
                 </div>
-            </div>
             </div>
         </section>
 
