--- a/index.html
+++ b/index.html
@@ -136,15 +136,12 @@
                 
                 <!-- Profile Image (Populated by data-loader.js) -->
                 <div class="flex-shrink-0 relative group">
-                    <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white dark:border-slate-700 shadow-xl bg-gray-200 dark:bg-slate-800">
+                    <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white dark:border-slate-700 shadow-xl bg-gray-200 dark:bg-slate-800 transition-all duration-300 group-hover:border-primary-500 dark:group-hover:border-primary-400 group-hover:shadow-2xl group-hover:shadow-primary-200 dark:group-hover:shadow-primary-900/50">
                         <img
                         src=""
                         alt=""
                         class="w-full h-full object-cover transition-all duration-500"
                         />
-                    </div>
-                    <div class="absolute bottom-2 right-2 md:bottom-4 md:right-4 bg-white dark:bg-slate-700 p-2 rounded-full shadow-md text-primary-600 dark:text-primary-400">
-                        <i data-lucide="map-pin" class="w-5 h-5"></i>
                     </div>
                 </div>
 
